add file to deploy

--- a/templates/admin_panel/channels_list.html
+++ b/templates/admin_panel/channels_list.html
@@ -17,12 +17,12 @@
             <thead>
                 <tr>
                     <th>ID</th>
-                    <th>Назва</th>
-                    <td>Посилання</td>
-                    <th>Категорія</th>
-                    <th>Створено</th>
-                    <th>Оновлено</th>
-                    <th style="width: 150px;">Дії</th>
+                    <th>Name</th>
+                    <th>Link</th>
+                    <th>Category</th>
+                    <th>Created</th>
+                    <th>Updated</th>
+                    <th style="width: 150px;">Actions</th>
                 </tr>
             </thead>
             <tbody>
