--- a/templates/admin_panel/index.html
+++ b/templates/admin_panel/index.html
@@ -282,7 +282,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#categories"><i class="fas fa-folder me-1"></i> Categories</a>
                     </li>
-                    
+                    <li class="nav-item">
+                        <a class="nav-link" href="#sessions"><i class="fas fa-users me-1"></i> Sessions</a>
+                    </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#messages"><i class="fas fa-comments me-1"></i> Messages</a>
                     </li>
