--- a/templates/base.html
+++ b/templates/base.html
@@ -164,6 +164,9 @@
                     <a href="{% url 'messages_list' %}" class="d-block text-white text-decoration-none sidebar-item">
                         <i class="fas fa-comment"></i> Messages
                     </a>
+                    <a href="{% url 'sessions_list' %}" class="d-block text-white text-decoration-none sidebar-item">
+                        <i class="fas fa-key"></i> Telegram Sessions
+                    </a>
                     <div class="mt-5">
                         <a href="{% url 'logout' %}" class="d-block text-white text-decoration-none sidebar-item">
                             <i class="fas fa-sign-out-alt"></i> Logout
