--- a/templates/admin_panel/admin_panel.html
+++ b/templates/admin_panel/admin_panel.html
@@ -78,6 +78,23 @@
                     </div>
                 </div>
             </div>
+            
+            <div class="col-xl-3 col-md-6 mb-4">
+                <div class="card stat-card border-left-primary shadow h-100 py-2">
+                    <div class="card-body">
+                        <div class="row no-gutters align-items-center">
+                            <div class="col">
+                                <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
+                                    Telegram Sessions</div>
+                                <div class="h5 mb-0 font-weight-bold text-gray-800">{{ sessions_count }}</div>
+                            </div>
+                            <div class="col-auto">
+                                <a href="{% url 'sessions_list' %}"><i class="fas fa-key stat-icon text-primary"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
         
         <div class="row">
