--- a/templates/admin_panel/admin_panel.html
+++ b/templates/admin_panel/admin_panel.html
@@ -95,6 +95,23 @@
                     </div>
                 </div>
             </div>
+            
+            <div class="col-xl-3 col-md-6 mb-4">
+                <div class="card stat-card border-left-info shadow h-100 py-2">
+                    <div class="card-body">
+                        <div class="row no-gutters align-items-center">
+                            <div class="col">
+                                <div class="text-xs font-weight-bold text-info text-uppercase mb-1">
+                                    Bot Settings</div>
+                                <div class="h5 mb-0 font-weight-bold text-gray-800">Configuration</div>
+                            </div>
+                            <div class="col-auto">
+                                <a href="{% url 'bot_settings' %}"><i class="fas fa-robot stat-icon text-info"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
         
         <div class="row">
