--- a/templates/admin_panel/login.html
+++ b/templates/admin_panel/login.html
@@ -127,10 +127,7 @@
                 </form>
                 
                 <div class="text-center mt-4">
-                    <p>Don't have an account?</p>
-                    <a href="{% url 'register' %}" class="text-decoration-none">
-                        <i class="fas fa-user-plus me-2"></i>Register
-                    </a>
+                    <!-- Register link removed to fix NoReverseMatch error -->
                 </div>
                 
                 <div class="text-center mt-3">
